Add new launch files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ find_package(catkin REQUIRED COMPONENTS
   )
 catkin_destinations() # define ${CATKIN_PACKAGE_SHARE_DESTINATION}
 
-#set(UEYE_LIBRARY_PATH /usr/lib)
+#set(UEYE_LIBRARY_PATH /usr/lib/)
 find_library(UEYE_LIBRARY ueye_api)
 set(USE_UNOFFICIAL_UEYE_DRIVERS FALSE)
 if(NOT UEYE_LIBRARY)
